add coffee-script compiling to server

--- a/public/encapsulate/index.html
+++ b/public/encapsulate/index.html
@@ -12,6 +12,7 @@
     </style>
     <script src="../pixi.dev.js"></script>
     <script src="Engine.js"></script>
+    <script src="test.js"></script>
 </head>
 
 <body>
